--- a/src/app/acerca-de/acerca-de.page.html
+++ b/src/app/acerca-de/acerca-de.page.html
@@ -3,10 +3,13 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>acerca-de</ion-title>
+    <ion-title>Acerca de</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+<img src="..\assets\Iconos\foto.jpeg" alt="">
+<ion-item>
+  Contactame :<br> enmanuel_arias19@hotmail.com
+</ion-item>
 </ion-content>
