--- a/src/app/clima/clima.page.html
+++ b/src/app/clima/clima.page.html
@@ -3,21 +3,19 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>clima</ion-title>
+    <ion-title>Clima</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="fondo">
-  <ion-item>
-    <ion-label position="floating">Ingrese la ciudad</ion-label>
-    <ion-input placeholder="Ciudad" [(ngModel)] = "ciudad"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-button (click)="predict()" expand="block" fill="clear" shape="round">
-      Predecir
-    </ion-button>
-  </ion-item>
-  <ion-item *ngIf="result" class="fondo">
-    <ion-label>{{result}}</ion-label>
-  </ion-item>
+<ion-content [fullscreen]="true">
+  <div [ngStyle]="{'background': estadoClima}" class="principal">
+      <span class="ciudad"> {{ciudad}}</span>
+      <div>
+        <img src="{{img}}" alt="iconClima" class="imagen">
+      </div>
+      <span class="grados">{{temp}}°C</span>
+
+      <span class="estado">{{status}}</span>
+  </div>
+  
 </ion-content>
