--- a/src/app/edad/edad.page.html
+++ b/src/app/edad/edad.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>edad</ion-title>
+    <ion-title>Predecir edad</ion-title>
   </ion-toolbar>
 </ion-header>
 
